--- a/catalog-service-dev.yml
+++ b/catalog-service-dev.yml
@@ -1,9 +1,40 @@
 server:
   port: 8081
 
+spring:
+  data:
+    mongodb:
+      host: mongodb
+      port: 27017
+      database: catalogdb
+
+  rabbitmq:
+    username: guest
+    password: guest
+    host: rabbit-mq
+    port: 5672
+
+rabbitmq:
+  queue:
+    catalog:
+      name: catalogQueue
+
 eureka:
   client:
     fetchRegistry: true
     registerWithEureka: true
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://registry-server:8761/eureka
+
+#Configuracion de actuator
+management:
+  endpoints:
+    web:
+      exposure:
+        include: circuitbreakers,circuitbreakerevents,health,info
+  health:
+    circuitbreakers:
+      enabled: true
+  endpoint:
+    health:
+      showDetails: always
