--- a/gateway-service-dev.yml
+++ b/gateway-service-dev.yml
@@ -6,20 +6,22 @@ eureka:
     fetchRegistry: true
     registerWithEureka: true
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://registry-server:8761/eureka
 
 spring:
   cloud:
     gateway:
       routes:
-        - id: library
-          uri: http://localhost:8082/
+        - id: catalog
+          uri: http://catalog-service:8081/
           predicates:
             - Path=/movies/**
-        - id: games
-          uri: http://localhost:8081
-          predicates:
+            - Path=/series/**
             - Path=/catalog/**
+#        - id: games
+#          uri: http://localhost:8081
+#          predicates:
+#            - Path=/catalog/**
       discovery:
         locator:
           enabled: false
