--- a/movie-service-dev.yml
+++ b/movie-service-dev.yml
@@ -1,25 +1,64 @@
+server:
+  port: 8082
+
 spring:
   datasource:
-    driverClassName: org.h2.Driver
+    driverClassName: org.h2.Driver # com.mysql.cj.jdbc.Driver
     url: jdbc:h2:mem:db/movies;DB_CLOSE_DELAY=-1
+#    url: jdbc:mysql://localhost:3306/moviesdb
     username: sa
     password: sa
 
-  sql:
-    init:
-      dataLocations: classPath:/movie-service.sql
+#  sql:
+#    init:
+#      dataLocations: classPath:/movie-com.DH.movieservice.service.sql
 
   jpa:
     defer-datasource-initialization: true
+    showSql: true
     hibernate:
       ddlAuto: create-drop
 
-server:
-  port: 8082
+#  data:
+#    zipkin:
+#      base-url: http://localhost:9411/
+#      enabled: true
+  rabbitmq:
+    username: guest
+    password: guest
+    host: rabbit-mq
+    port: 5672
+
+rabbitmq:
+  queue:
+    catalog:
+      name: catalogQueue
 
 eureka:
   client:
     fetchRegistry: true
     registerWithEureka: true
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://registry-server:8761/eureka
+
+resilience4j:
+  circuitbreaker:
+    instances:
+      movies:
+        allowHealthIndicatorToFail: false
+        registerHealthIndicator: true
+        slidingWindowType: COUNT_BASED
+        slidingWindowSize: 5
+        failureRateThreshold: 50
+        waitDurationInOpenState: 15000
+        permittedNumberOfCallsInHalfOpenState: 3
+        automaticTransitionFromOpenToHalfOpenEnabled: true
+
+  retry:
+    instances:
+      movies:
+        maxAttempts: 3
+        waitDuration: 1000
+        retryExceptions:
+#          - feign.FeignException$InternalServerError
+          - java.lang.Exception
