--- a/registry-service-dev.yml
+++ b/registry-service-dev.yml
@@ -7,6 +7,6 @@ eureka:
     fetchRegistry: false
     registerWithEureka: false
     serviceUrl:
-      defaultZone: http://localhost:${server.port}/eureka/
+      defaultZone: http://registry-server:${server.port}/eureka/
       instance:
         preferIpAddress: true
